updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a hospitality professional currently working for Hyatt</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Seattle, WA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Hiking, yoga, reading, true crime, music</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Still figuring this one out. </p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Crystal Lake, IL</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I'm looking for a career change & this is something I've been interested in for a while.</p>
     </section>
 
     <footer id="footer">
